tests/diagnostics/catalog/snapshots/ir/IR0053.snap
error[IR0053]: IR_E_PRIVATE_SYMBOL
 --> tests/diagnostics/catalog/sources/ir/IR0053.vit:4:8
  |
4 |   give unresolved_ir_contract;
  |        ^^^^^^^^^^^^^^^^^^^^^^ IR diagnostic anchor
  = note: snapshot covers code, title, span, notes, suggestions, recovery and stable order for IR0053
  = help: keep IR validation diagnostics structured and catalog-backed
